--- a/src/app/pages/hero/hero.component.html
+++ b/src/app/pages/hero/hero.component.html
@@ -1,4 +1,4 @@
-<section class="container-fluid text-dark vh-100 d-flex align-items-center justify-content-left hero-section" id="hero">
+<section class="container-fluid text-dark vh-100 d-flex align-items-center justify-content-center hero-section" id="hero">
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2 text-center">
@@ -21,4 +21,8 @@
       </div>
     </div>
   </div>
+  <div class="scroll-down">
+   <a href="#education" style="color: white;"> <i class="fas fa-chevron-down"></i></a>
+  </div>
 </section>
+
