--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -39,6 +39,11 @@
     width: 100%; 
     left: 0; 
   }
+  @media screen and (max-width: 768px) {
+    ul {
+      display: none;
+    }
+  }
   
   @media screen and (max-height: 300px) {
     ul {
