--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,14 @@
 html, body {
   height: 100%;
   margin: 0;
+  padding: 0;
   
+}
+@media (max-width: 768px) {
+  section {
+    margin-bottom: 30px; /* Adjust as needed for smaller screens */
+    padding: 15px; /* Adjust as needed for smaller screens */
+  }
 }
 
 
