--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="get-in-touch" id="contact">
+<section class="get-in-touch" id="contact" netlify>
     <h1 class="title">Get in touch</h1>
     <form class="contact-form row">
        <div class="form-field col-lg-6">
