--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -4,7 +4,7 @@
         @for (project of projects; track $index){
       <div class="col-md-4">
         <div class="card mb-4 shadow-sm">
-          <img class="card-img-top" [src]="project.image" alt="Project image">
+        <!--<img class="card-img-top" [src]="project.image" alt="Project image">-->
           <div class="card-body">
             <h5 class="card-title">{{ project.project }}</h5>
                 <div class="btn-group">
