--- a/src/app/pages/studies/studies.component.html
+++ b/src/app/pages/studies/studies.component.html
@@ -2,37 +2,43 @@
  <h1>Education</h1>
   <ul>
     <li style="--index: 1">
-      <h3>2015</h3>
-      <p>CHIWEN B.V. established</p>
+      <h3>2019</h3>
+      <p><b>Mehdi El Mandjra</b><br>
+        Baccalaureate in Physical Sciences        
+      </p>
     </li>
     <li style="--index: 2">
-      <h3>2016</h3>
-      <p>Established long-term research partnership with University of Groningen</p>
+      <h3>2020</h3>
+      <p><b>FSR Rabat</b><br>
+        1 year SMPC major</p>
     </li>
     <li style="--index: 3">
-      <h3>2017</h3>
-      <p>Research on machine learning, deep learning, distributed training, brain-inspired pattern recognition algorithms, Neo4J and Blockchain, and distributed computing</p>
+      <h3>2021</h3>
+      <p><b>Ecole Supérieure de Technologie-Sale</b><br>
+        Preparing for a University Diploma of Technology (DUT) in Software Engineering.
+      </p>
     </li>
     <li style="--index: 4">
-      <h3>2018 Jan-Mar</h3>
-      <p>Started TuDoLink project Team building Project Feasibility Analysis</p>
+      <h3>2022</h3>
+      <p><b>Ecole Supérieure de Technologie-Sale</b><br>
+        Obtaining a University Diploma of Technology (DUT) in Software Engineering</p>
     </li>
     <li style="--index: 5">
-      <h3>2018 Apr-Jul</h3>
-      <p>
-        System Framework Design Social Interaction Optimize Partnerships Optimize Business Plan Seed Funding Prepare MVP Prepare Pre-ICO Active on Social Media
+      <h3>2023</h3>
+      <p><b>Mohammed V University</b><br>
+        Obtaining Professional Bachelor's Degree in Information Systems and Data Analysis.
       </p>
     </li>
     <li style="--index: 6">
-      <h3>2018 Aug-Dec</h3>
-      <p>
-        MVP Development Collect Feedbacks of MVP Improve and Update MVP Optimize Team Development Optimize Business Development Release System Beta V1.0 System Testing Prepare ICO Prepare to List
+      <h3>2024</h3>
+      <p><b>This is Future!</b><br>
+       
       </p>
     </li>
     <li style="--index: 7">
-      <h3>2019 Jan-Jun</h3>
-      <p>
-        ICO List Tokens Release APP & Trading Platform V1.0 Works on most of CPUs, GPUs, VPUS Distribute Globally
+      <h3>2025</h3>
+      <p><b>This is Future!</b><br>
+    
       </p>
     </li>
   </ul>
