--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,29 +1,22 @@
 <footer>
     <section class="fixed-bottom fixed-right">
-        <div class="bg-gray-900 p-4">
-            <a href="https://twitter.com/" target="_blank" class="text-white hover:text-primary mr-4" rel="noreferrer">
-                <i class="fab fa-twitter fa-lg"></i>
-            </a>
-            <div class="h-6 bg-white mr-4 ml-auto"></div> <!-- White vertical line -->
-            <a href="https://github.com/zaim001" target="_blank" class="text-white hover:text-primary mr-4" rel="noreferrer">
-                <i class="fab fa-github fa-lg"></i>
-            </a>
-            <div class="h-6 bg-white mr-4 ml-auto"></div> <!-- White vertical line -->
-            <a href="https://www.linkedin.com/in/badr-eddine-zaim/" target="_blank" class="text-white hover:text-primary mr-4" rel="noreferrer">
-                <i class="fab fa-linkedin fa-lg"></i>
-            </a>
-            <div class="h-6 bg-white mr-4 ml-auto"></div> <!-- White vertical line -->
-            <a href="https://stackoverflow.com/" target="_blank" class="text-white hover:text-primary mr-4" rel="noreferrer">
-                <i class="fab fa-stack-overflow fa-lg"></i>
-            </a>
-       
-            <div class="h-6 ml-[5px] border-l border-foreground"></div> <!-- Additional line -->
-            <a href="mailto:badreddinezaim1@gmail.com" target="_blank" class="text-white hover:text-primary" rel="noreferrer">
-                <i class="far fa-envelope fa-lg"></i>
-            </a>
-        </div>
+        <ul class="footer-left-bar d-none d-md-block">
+            <li>
+                <a  href="https://github.com/zaim001" target='_blank'>
+                    <i class="fab fa-github"></i>
+                </a>
+            </li>
+            <li>
+                <a  href="https://www.linkedin.com/in/badr-eddine-zaim/" target='_blank'>
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </li>
+        </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a  href="" target='_blank' style="text-decoration: none;">badreddinezaim1&#64;gmail.com</a>
+            <a  href="#" target='_blank' style="text-decoration: none;">badreddinezaim1&#64;gmail.com</a>
         </div>
     </section>
+    <div class="text-center w-full sm:w-auto" >
+        © 2024. All rights reserved.
+      </div>
 </footer>
