--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -4,10 +4,8 @@ h1{
   margin: 100px;
   color: white;
 }
-span {
-  border-radius: 5px;
-  padding: 3px 5px;
-};
+
+
 .card-title{
   color: white;
 }
@@ -28,4 +26,6 @@ p{
 }
 .text-muted{
   color: white !important;
+  padding: 0;
+  margin: 0;
 }
