--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
-<section class="get-in-touch" id="contact" netlify>
+<section class="get-in-touch" id="contact" >
     <h1 class="title">Get in touch</h1>
-    <form class="contact-form row">
+    <form class="contact-form row" netlify>
        <div class="form-field col-lg-6">
           <input id="name" class="input-text js-input" type="text" required>
           <label class="label" for="name">Name</label>
