--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
-<section class="get-in-touch" id="contact" >
+<section class="get-in-touch">
     <h1 class="title">Get in touch</h1>
-    <form name="contact" action="/thanks.html" class="contact-form row" data-netlify="true" >
+    <form name="contact" action="/thanks.html" method="POST" class="contact-form row" data-netlify="true" >
        <div class="form-field col-lg-6">
           <input id="name" class="input-text js-input" type="text" required>
           <label class="label" for="name">Name</label>
