--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,24 +1,28 @@
 <section class="get-in-touch">
     <h1 class="title">Get in touch</h1>
-    <form name="contact" method="post" class="contact-form row" netlify>
+    <form name="contact" method="post" class="contact-form row" netlify netlify-honeypot="bot-field">
+      <input type="hidden" name="form-name" value="contact">
+      <p class="honeypot">
+         <label>Don’t fill this out if you're human: <input name="bot-field"></label>
+     </p>     
        <div class="form-field col-lg-6">
           <input id="name" class="input-text js-input" type="text" required>
           <label class="label" for="name">Name</label>
        </div>
        <div class="form-field col-lg-6 ">
-          <input id="email" class="input-text js-input" type="email" required>
+          <input id="email" name="name" class="input-text js-input" type="email" required>
           <label class="label" for="email">E-mail</label>
        </div>
        <div class="form-field col-lg-6 ">
-          <input id="company" class="input-text js-input" type="text" required>
+          <input id="company" name="company" class="input-text js-input" type="text" required>
           <label class="label" for="company">Company Name</label>
        </div>
         <div class="form-field col-lg-6 ">
-          <input id="phone" class="input-text js-input" type="text" required>
+          <input id="phone" name="phone" class="input-text js-input" type="text" required>
           <label class="label" for="phone">Contact Number</label>
        </div>
        <div class="form-field col-lg-12">
-          <input id="message" class="input-text js-input" type="text" required>
+          <input id="message" name="message" class="input-text js-input" type="text" required>
           <label class="label" for="message">Message</label>
        </div>
        <div class="form-field col-lg-12">
