--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,7 +1,7 @@
-<section class="get-in-touch">
+<section class="get-in-touch" id="contact">
     <h1 class="title">Get in touch</h1>
     <form name="contact" method="post" class="contact-form row" netlify netlify-honeypot="bot-field">
-      <input type="hidden" name="form-name" value="contact">
+      <input type="hidden" name="form-name" value="Contact" />
       <p class="honeypot">
          <label>Don’t fill this out if you're human: <input name="bot-field"></label>
      </p>     
