--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,16 +1,12 @@
 <section class="get-in-touch" id="contact">
     <h1 class="title">Get in touch</h1>
-    <form name="contact" method="post" class="contact-form row" netlify netlify-honeypot="bot-field">
-      <input type="hidden" name="form-name" value="Contact" />
-      <p class="honeypot">
-         <label>Don’t fill this out if you're human: <input name="bot-field"></label>
-     </p>     
+    <form name="mycontact" method="post" class="contact-form row" netlify netlify-honeypot="bot-field">    
        <div class="form-field col-lg-6">
-          <input id="name" class="input-text js-input" type="text" required>
+          <input id="name" name="name" class="input-text js-input" type="text" required>
           <label class="label" for="name">Name</label>
        </div>
        <div class="form-field col-lg-6 ">
-          <input id="email" name="name" class="input-text js-input" type="email" required>
+          <input id="email" name="Email" class="input-text js-input" type="email" required>
           <label class="label" for="email">E-mail</label>
        </div>
        <div class="form-field col-lg-6 ">
