--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
 <section class="get-in-touch" id="contact">
     <h1 class="title">Get in touch</h1>
-    <form name="mycontact" method="post" class="contact-form row" netlify netlify-honeypot="bot-field">    
+    <form name="MyContact" method="post" class="contact-form row" netlify netlify-honeypot="bot-field">    
        <div class="form-field col-lg-6">
           <input id="name" name="name" class="input-text js-input" type="text" required>
           <label class="label" for="name">Name</label>
