--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,6 +1,10 @@
 <section class="get-in-touch" id="contact">
     <h1 class="title">Get in touch</h1>
-    <form name="MyContact" method="post"  action="assets/thanks.html" class="contact-form row" netlify>    
+    <form name="MyContact" method="post" class="contact-form row" data-netlify=true>
+      <input type="hidden" name="form-name" value="contact-input">
+      <p class="honeypot">
+          <label>Don’t fill this out if you're human: <input name="bot-field"></label>
+      </p>   
        <div class="form-field col-lg-6">
           <input id="name" name="name" class="input-text js-input" type="text" required>
           <label class="label" for="name">Name</label>
