--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,28 +1,30 @@
 <section class="get-in-touch" id="contact">
-    <h1 class="title">Get in touch</h1>
-    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" name="MyContact" method="post" class="contact-form row" netlify netlify-honeypot="bot-field" >
-       <div class="form-field col-lg-6">
-          <input id="name" name="name" class="input-text js-input" type="text" required>
-          <label class="label" for="name">Name</label>
-       </div>
-       <div class="form-field col-lg-6 ">
-          <input id="email" name="Email" class="input-text js-input" type="email" required>
-          <label class="label" for="email">E-mail</label>
-       </div>
-       <div class="form-field col-lg-6 ">
-          <input id="company" name="company" class="input-text js-input" type="text" required>
-          <label class="label" for="company">Company Name</label>
-       </div>
-        <div class="form-field col-lg-6 ">
-          <input id="phone" name="phone" class="input-text js-input" type="text" required>
-          <label class="label" for="phone">Contact Number</label>
-       </div>
-       <div class="form-field col-lg-12">
-          <input id="message" name="message" class="input-text js-input" type="text" required>
-          <label class="label" for="message">Message</label>
-       </div>
-       <div class="form-field col-lg-12">
-          <input class="submit-btn" type="submit" value="Submit">
-       </div>
-    </form>
+   <h1 class="title">Get in touch</h1>
+   <form name="contact" netlify netlify-honeypot="bot-field" (ngSubmit)="onSubmit()" [formGroup]="contactForm" class="contact-form row">
+     <input type="hidden" name="form-name" value="contact" />
+     <div class="form-field col-lg-6">
+       <input id="name" name="name" formControlName="name" class="input-text js-input" type="text" required />
+       <label class="label" for="name">Name</label>
+     </div>
+     <div class="form-field col-lg-6">
+       <input id="email" name="email" formControlName="email" class="input-text js-input" type="email" required />
+       <label class="label" for="email">E-mail</label>
+     </div>
+     <div class="form-field col-lg-6">
+       <input id="company" name="company" formControlName="company" class="input-text js-input" type="text" required />
+       <label class="label" for="company">Company Name</label>
+     </div>
+     <div class="form-field col-lg-6">
+       <input id="phone" name="phone" formControlName="phone" class="input-text js-input" type="text" required />
+       <label class="label" for="phone">Contact Number</label>
+     </div>
+     <div class="form-field col-lg-12">
+       <input id="message" name="message" formControlName="message" class="input-text js-input" type="text" required />
+       <label class="label" for="message">Message</label>
+     </div>
+     <div class="form-field col-lg-12">
+       <button class="submit-btn" type="submit">Submit</button>
+     </div>
+   </form>
  </section>
+ 
