--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -13,7 +13,7 @@
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a  href="#" target='_blank' style="text-decoration: none;">badreddinezaim1&#64;gmail.com</a>
+            <a  href="#" target='_blank' style="text-decoration: none;pointer-events: none"> badreddinezaim1&#64;gmail.com</a>
         </div>
     </section>
     <div class="text-center w-full sm:w-auto" >
