--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -45,8 +45,8 @@
       <p>Command Line</p>
     </div>
     <div class="box-icon">
-      <i class="devicon devicon-visualstudio-plain" aria-hidden="true"></i>
-      <p>VS Code</p>
+      <i class="devicon-postgresql-plain" aria-hidden="true"></i>
+      <p>PostgreSql</p>
     </div>
     <div class="box-icon">
       <i class="devicon devicon-wordpress-plain" aria-hidden="true"></i>
