adding certificates section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,6 +4,7 @@
      <app-experiences></app-experiences>
      <app-skills></app-skills>
      <app-projects></app-projects>
+     <app-certs></app-certs>
      <app-contact></app-contact>
   </main>
   
