--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="#certificates">Certificates</a></li>
       <li><a href="assets/cv/MyCv.pdf">CV</a></li>
-      <!--<li><a href="#certificates">Certificats</a></li>-->
     </ul>
 </nav>
