--- a/src/app/pages/hero/hero.component.html
+++ b/src/app/pages/hero/hero.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2 text-center">
-        <h1 class="display-4">Hi, I'm <span class="text-primary">Badr Eddine Zaim</span></h1>
+        <h1><b>Hi, I'm <span class="text-primary">Badr Eddine Zaim</span></b></h1>
         <p class="lead"><b>Software engineer with a passion for solving complex problems.I have experience with a variety of web development tools and techniques, I am also a team player and I am always willing to go the extra mile to help my colleagues. I am constantly learning new technologies and I am always looking for ways to improve my skills and knowledge. I am excited to find a new opportunity where I can use my skills to make a positive impact.</b></p>
         <div class="btn-group mt-4" role="group" aria-label="Social media links">
           <a href="https://github.com/zaim001" target="_blank" class="btn btn-outline-dark btn-lg">
