--- a/src/app/shared/background/background.component.scss
+++ b/src/app/shared/background/background.component.scss
@@ -1,117 +1,101 @@
+
+.universe {
+  z-index: -10000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  filter: contrast(120%);
+  background-color: black;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.universe-container {
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(1600px at 70% 120%, rgba(33, 39, 80, 1) 10%, #020409 100%);
+}
+
+.content {
+  width: inherit;
+  height: inherit;
+}
+
+#universe {
+  width: 100%;
+  height: 100%;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0px;
+  height: 300px;
+  width: 100%;
+}
+
+#scene {
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  margin-left: -800px;
+  z-index: 100000;
+}
+
+// stars animation
 @function multiple-box-shadow($n) {
-    $value: '#{random(2000)}px #{random(2000)}px #FFF';
-    @for $i from 2 through $n {
-      $value: '#{$value}, #{random(2000)}px #{random(2000)}px #FFF';
-    }
-    @return unquote($value);
+  $value: '#{random(2000)}px #{random(2000)}px #FFF';
+  @for $i from 2 through $n {
+    $value: '#{$value}, #{random(2000)}px #{random(2000)}px #FFF';
   }
-  
-  $shadows-small:  multiple-box-shadow(700);
-  $shadows-medium: multiple-box-shadow(200);
-  $shadows-big:    multiple-box-shadow(100);
-  
-  :host {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; 
-    overflow: hidden;
-    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-  }
-  
-  html {
-    height: 100%;
-    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-    overflow: hidden;
-  }
-  
-  #stars, #stars2, #stars3 {
+  @return unquote($value);
+}
+
+$shadows-small:  multiple-box-shadow(700);
+$shadows-medium: multiple-box-shadow(200);
+
+
+#stars, #stars2 {
+  width: 1px;
+  height: 1px;
+  background: transparent;
+  &:after {
+    content: " ";
+    position: absolute;
+    top: 2000px;
     width: 1px;
     height: 1px;
     background: transparent;
-    &:after {
-      content: " ";
-      position: absolute;
-      top: 2000px;
-      width: 1px;
-      height: 1px;
-      background: transparent;
-      position: absolute;
-    }
+    position: absolute;
   }
-  
-  #stars {
-    box-shadow: $shadows-small;
-    animation: animStar 50s linear infinite;
-  }
-  
-  #stars2 {
+}
+
+#stars {
+  box-shadow: $shadows-small;
+  animation: animStar 50s linear infinite;
+}
+
+#stars2 {
+  width: 2px;
+  height: 2px;
+  box-shadow: $shadows-medium;
+  animation: animStar 100s linear infinite;
+  &:after {
     width: 2px;
     height: 2px;
-    box-shadow: $shadows-medium;
-    animation: animStar 100s linear infinite;
-    &:after {
-      width: 2px;
-      height: 2px;
-      background: white;
-    }
+    background: white;
   }
-  
-  #stars3 {
-    width: 5px;
-    height: 5px;
-    box-shadow: $shadows-big;
-    animation: animStar 150s linear infinite;
-    &:after {
-      width: 3px;
-      height: 3px;
-    }
+}
+
+@keyframes animStar {
+  from {
+    transform: translateY(0px);
   }
-  
-  #title, #title2 {
-    position: absolute;
-    left: 0;
-    right: 0;
-    color: #FFF;
-    text-align: center;
-    font-family: 'lato', sans-serif;
-    letter-spacing: 10px;
+  to {
+    transform: translateY(-5000px);
   }
-  
-  #title {
-    top: 50%;
-    font-weight: 300;
-    font-size: 3em;
-    margin-top: -60px;
-    padding-left: 10px;
-    span {
-      background: -webkit-linear-gradient(white, #38495a);
-      -webkit-text-fill-color: transparent;
-    }
-  }
-  
-  #title2 {
-    top: 60%;
-    color: #000;
-    font-family: 'impact', sans-serif;
-    font-weight: 600;
-    font-size: 4em;
-    margin-top: 100px;
-    padding-left: 10px;
-    span {
-      background: -webkit-linear-gradient(white, #000000);
-      -webkit-text-fill-color: transparent;
-    }
-  }
-  
-  @keyframes animStar {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateY(-5000px);
-    }
-  }
-  
+}
