--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav>
     <ul>
-      <li><a href="#hero">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#certificates">Certificates</a></li>
-      <li><a href="assets/cv/MyCv.pdf">CV</a></li>
+      <li><a href="#hero"><i class="fas fa-globe-americas"></i> About</a></li>
+      <li><a href="#skills"><i class="fas fa-sun"></i>Skills</a></li>
+      <li><a href="#projects"><i class="far fa-moon"></i>Projects</a></li>
+      <li><a href="#certificates"><i class="fas fa-globe"></i>Certificates</a></li>
+      <li><a href="#contact"><i class="far fa-star"></i>Contact</a></li>
+      <li><a href="assets/cv/MyCv.pdf"><i class="fas fa-meteor"></i>CV</a></li>
     </ul>
 </nav>
