--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,52 +1,71 @@
 
-ul { 
-    margin: auto;
-    padding: 0; 
-    display: table;
-    width: 600px;
-    text-align: center;
-    
-  }
-  li { 
-    display: table-cell; 
-    position: relative; 
-    padding: 15px 0;
-  }
+nav {
+ padding: 20px 0; 
+}
 
-  a {
-    color: #fff;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 0.15em;
-    display: inline-block;
-    padding: 15px 20px;
-    position: relative;
-  }
-  a:after {    
-    background: none repeat scroll 0 0 transparent;
-    bottom: 0;
-    content: "";
-    display: block;
-    height: 2px;
-    left: 50%;
-    position: absolute;
-    background: #fff;
-    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-    width: 0;
-  }
-  a:hover:after { 
-    width: 100%; 
-    left: 0; 
-  }
-  @media screen and (max-width: 768px) {
-    ul {
-      display: none;
-    }
+/* Navigation List */
+nav ul { 
+  margin: 0 auto;
+  padding: 0; 
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+
+nav ul li { 
+  margin: 0 10px;
+}
+
+
+nav ul li a {
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 0.15em;
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+
+nav ul li a i {
+  margin-right: 8px;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+}
+
+
+nav ul li a::after {    
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  transition: width 0.3s ease-in-out;
+}
+
+nav ul li a:hover::after { 
+  width: 100%; 
+}
+
+nav ul li a:hover {
+  color: #ddd; 
+}
+
+
+@media screen and (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    align-items: center;
   }
   
-  @media screen and (max-height: 300px) {
-    ul {
-      flex-direction: column;
+  nav ul li {
+    margin: 5px 0;
   }
-  }
-  
+}
