working on website responsivity

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -12,6 +12,9 @@
     padding-bottom: 48px;
     color: white;
   }
+  input.input-text {
+    color: #1818d9; 
+  }
   
   .contact-form .form-field {
     position: relative;
