--- a/src/app/pages/hero/hero.component.scss
+++ b/src/app/pages/hero/hero.component.scss
@@ -31,16 +31,13 @@ p {
 /* Adjust margin for smaller screens if needed */
 @media (max-width: 800px) {
   .hero-section {
-    position: relative;
-    left:0;
-    padding: 30px 10px; /* Adjust margin for smaller screens */
-    margin: 30px -45px;
+    position: fixed;
+    padding: 80px 10px; /* Adjust margin for smaller screens */
+    right: 2.7rem;
     display: flex;
-    justify-content: flex-start;
-    
+    justify-content: flex-start;  
   }
 }
-
 
 .scroll-down {
   position: absolute;
@@ -68,10 +65,9 @@ p {
 
 @media (max-width: 1500px) {
   .hero-section {
-    padding-top: 80px;
+    padding-top: 0rem;
     position: relative;
-    top: 50px;
-    height: calc(100% - 300px);
+    top: 0rem;
   }
   .scroll-down {
     display: none;
