--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,15 +6,14 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  
-  
+  overflow-x: hidden;  
 }
 @media (max-width: 768px) {
   section {
-    margin-bottom: 30px; /* Adjust as needed for smaller screens */
-    padding: 15px; /* Adjust as needed for smaller screens */
+    margin-bottom: 0; /* Adjust as needed for smaller screens */
+    padding: 0; /* Adjust as needed for smaller screens */
   }
-}
+} 
 
 
 
