--- a/src/app/pages/hero/hero.component.scss
+++ b/src/app/pages/hero/hero.component.scss
@@ -73,4 +73,22 @@ p {
     display: none;
   }
 }
+@media (max-width: 360px) and (max-height: 740px) {
+   .hero-section {
+    padding-top: 10rem;
+  }
+  h1{
+    font-size:180%;
+    padding-right: 68px;
+  }
+  p{
+    font-size:1rem;
+    padding-right: 50px;
+  }
+  .btn-group{
+    padding-right: 20px;
+    position: relative;
+    right: 10px;
+  }
+}
 
