changing hero for responsivity

--- a/src/app/pages/hero/hero.component.html
+++ b/src/app/pages/hero/hero.component.html
@@ -1,29 +1,65 @@
-<section class="container-fluid text-dark vh-100 d-flex align-items-center justify-content-center hero-section" id="hero">
+<section class="min-vh-100">
   <div class="container">
-    <div class="row">
-      <div class="col-md-8 offset-md-2 text-center">
-        <h1><b>Hi, I'm <span class="text-primary">Badr Eddine Zaim</span></b></h1>
-        <p class="lead"><b>Software engineer with a passion for solving complex problems.I have experience with a variety of web development tools and techniques, I am also a team player and I am always willing to go the extra mile to help my colleagues. I am constantly learning new technologies and I am always looking for ways to improve my skills and knowledge. I am excited to find a new opportunity where I can use my skills to make a positive impact.</b></p>
-        <div class="btn-group mt-4" role="group" aria-label="Social media links">
-          <a href="https://github.com/zaim001" target="_blank" class="btn btn-outline-dark btn-lg">
-            <i class="fab fa-github"></i> GitHub
-          </a>
-          <a href="https://twitter.com/" target="_blank" class="btn btn-outline-dark btn-lg">
-            <i class="fab fa-twitter"></i> Twitter
-          </a>
-          <a href="https://linkedin.com/in/badr-eddine-zaim" target="_blank" class="btn btn-outline-dark btn-lg">
-            <i class="fab fa-linkedin"></i> LinkedIn
-          </a>
-          <a href="https://codepen.io/" target="_blank" class="btn btn-outline-dark btn-lg">
-            <i class="fab fa-codepen"></i> CodePen
-          </a>
+    <div class="row py-5">
+        <div class="col-lg-1 d-none d-lg-flex align-items-center">
+            <div class="lc-block d-flex" style="writing-mode: vertical-rl; transform:rotate(180deg)">
+                <a class="btn btn-link my-2 text-white text-decoration-none" href="#" role="button">Welcome</a>
+                <a class="btn btn-link my-4 text-white text-decoration-none" href="#" role="button">Bienvenue</a>
+                <a class="btn btn-link my-2 text-white text-decoration-none" href="#" role="button" lang="ar">مرحبا</a>
+            </div><!-- /lc-block -->
+        </div><!-- /col -->
+        <div class="col-sm-6 d-flex d-lg-none flex-sm-column align-items-center justify-content-around mb-4 mb-sm-0">
+            <div class="lc-block">
+                <a class="btn btn-link text-white text-decoration-none" href="#" role="button">Welcome</a>
+
+            </div>
+            <div class="lc-block">
+                <a class="btn btn-link text-white text-decoration-none" href="#" role="button">Bienvenu</a>
+
+            </div>
+            <div class="lc-block">
+                <a class="btn btn-link text-white text-decoration-none" href="#" role="button" lang="ar">مرحبا</a>
+
+            </div>
         </div>
-      </div>
+        <div class="col-lg-4 col-sm-6">
+            <div class="lc-block ratio ratio-1x1">
+                <img style="object-fit:cover" class="img-fluid" src="./assets/images/me.png" alt="Me">
+            </div><!-- /lc-block -->
+        </div><!-- /col -->
+        <div class="col-lg-4 offset-lg-1">
+            <div class="lc-block my-5">
+                <div editable="rich">
+                  <h1><b style="color: azure;">Hi, I'm <span class="text-primary">Badr Eddine Zaim</span></b></h1>
+                </div>
+            </div>
+            <div class="lc-block my-4">
+                <div editable="rich">
+                    <p>Passionate software developer skilled in web development tools, collaborative team player, dedicated to continuous learning and improvement. Seeking to leverage expertise to make a positive impact in a new opportunity.</p>
+                </div>
+            </div><!-- /lc-block -->
+            <div class="lc-block">
+              <div class="d-grid gap-1 d-md-flex justify-content-md-start">
+                <a href="https://github.com/zaim001" target="_blank" class="btn btn-outline-light me-md-2">
+                  <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="https://twitter.com/" target="_blank" class="btn btn-outline-light me-md-2">
+                  <i class="fab fa-twitter"></i> Twitter
+                </a>
+                <a href="https://linkedin.com/in/badr-eddine-zaim" target="_blank" class="btn btn-outline-light me-md-2">
+                  <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://codepen.io/" target="_blank" class="btn btn-outline-light">
+                  <i class="fab fa-codepen"></i> CodePen
+                </a>
+              </div>
+            </div>
+        </div><!-- /col -->
     </div>
-  </div>
-  <div class="scroll-down">
-   <a href="#education" style="color: white;"> <i class="fas fa-chevron-down"></i></a>
-  </div>
+</div>
+<div class="scroll-down">
+  <a href="#education" style="color: white;"> <i class="fas fa-chevron-down"></i></a>
+ </div>
 </section>
 
 
