--- a/src/app/pages/hero/hero.component.scss
+++ b/src/app/pages/hero/hero.component.scss
@@ -1,48 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Bungee+Hairline');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 h1 {
-  font-size: 50px;
+  font-size: 1.9rem;
   color: white;
-  margin-bottom: 20px;
-  font-family:"Bungee Hairline"
+  font-family:"Montserrat", sans-serif;
 }
 p {
   color: white;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Playwrite DE Grund", cursive;
+  justify-self: flex-start;
+}
+.lc-block img {
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
 }
 
-.btn {
-  color: white;
-  border-color: white;
+
+.container{
+  position: relative;
+  margin: 0 auto;
+  display: block;
+  justify-items: center;
 }
-
-.hero-section {
- position: relative;
- top:0;
-
-  .container {
-    display: flex;
-    justify-content: flex-start;
-    margin-top: -200px;
-  }
-}
-
-/* Adjust margin for smaller screens if needed */
-@media (max-width: 800px) {
-  .hero-section {
-    position: fixed;
-    padding: 80px 10px; /* Adjust margin for smaller screens */
-    right: 2.7rem;
-    display: flex;
-    justify-content: flex-start;  
-  }
-}
-
 .scroll-down {
-  position: absolute;
-  bottom: 150px; 
-  left: 50%;
+  position: relative;
+  margin: 50px auto;
   transform: translateX(-50%);
   text-align: center;
   font-size: 24px; 
@@ -62,33 +46,9 @@ p {
     transform: translateY(-5px);
   }
 }
-
-@media (max-width: 1500px) {
-  .hero-section {
-    padding-top: 0rem;
-    position: relative;
-    top: 0rem;
-  }
-  .scroll-down {
+@media (max-width:1500px) {
+  .scroll-down{
     display: none;
   }
+  
 }
-@media (max-width: 360px) and (max-height: 740px) {
-   .hero-section {
-    padding-top: 10rem;
-  }
-  h1{
-    font-size:180%;
-    padding-right: 68px;
-  }
-  p{
-    font-size:1rem;
-    padding-right: 50px;
-  }
-  .btn-group{
-    padding-right: 20px;
-    position: relative;
-    right: 10px;
-  }
-}
-
