adding routes fragments for sections navigation

--- a/src/app/pages/hero/hero.component.html
+++ b/src/app/pages/hero/hero.component.html
@@ -14,7 +14,7 @@
 
             </div>
             <div class="lc-block">
-                <a class="btn btn-link text-white text-decoration-none" href="#" role="button">Bienvenu</a>
+                <a class="btn btn-link text-white text-decoration-none" href="#" role="button">Bienvenue</a>
 
             </div>
             <div class="lc-block">
@@ -58,7 +58,7 @@
     </div>
 </div>
 <div class="scroll-down">
-  <a href="#education" style="color: white;"> <i class="fas fa-chevron-down"></i></a>
+  <a [routerLink]="['/']" [queryParams]="{ fragment: 'education' }" style="color: white;"> <i class="fas fa-chevron-down"></i></a>
  </div>
 </section>
 
