--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,14 @@
-<main class="flex flex-col flex-1 p-4">
-     <app-hero></app-hero>
-     <app-studies></app-studies>
-     <app-experiences></app-experiences>
-     <app-skills></app-skills>
-     <app-projects></app-projects>
-     <app-certs></app-certs>
-     <app-contact></app-contact>
-  </main>
+   <main class="flex flex-col flex-1 p-4">
+      <app-hero id="about"></app-hero>
+      <app-studies id="education"></app-studies>
+      <app-experiences id ="experiences"></app-experiences>
+      <app-skills id="skills"></app-skills>
+      <app-projects id="projects"></app-projects>
+      <app-certs id="certificates"></app-certs>
+      <app-contact id="contact"></app-contact>
+   </main>
   
+   
+   
+
+      
