--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
 </head>
-<section id="skills">
+<section>
   <h1>Skills & Tools</h1>
   <div class="container-icons">
     <div class="box-icon">
