--- a/src/app/pages/studies/studies.component.html
+++ b/src/app/pages/studies/studies.component.html
@@ -1,4 +1,4 @@
-<div class="timeline" style="--items: 7;" id="education">
+<div class="timeline" style="--items: 7;" >
  <h1>Education</h1>
   <ul>
     <li style="--index: 1">
