--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" id="projects">
+<div class="container mt-5">
     <h1>Projects</h1>
     <div class="row">
         @for (project of projects; track $index){
