--- a/src/app/pages/studies/studies.component.scss
+++ b/src/app/pages/studies/studies.component.scss
@@ -2,13 +2,13 @@
 .timeline {
   color: white;
   max-width: 1400px;
-  margin: -80px auto;
+  margin: 0 auto;
   padding: 40px;
 }
 
 .timeline h1 {
   text-align: center;
-  margin-bottom: 80px;
+  margin-bottom: 100px;
 }
 
 .timeline ul {
